fixed spacing

--- a/css/styles-new.css
+++ b/css/styles-new.css
@@ -60,8 +60,9 @@ textarea:focus {
     color: lightgray;
 }
 
-.label-spacing {
-    margin-top: 1em;
+.field-spacing,
+legend {
+    margin-bottom: 1em;
 }
 
 .label-spacing2 {
@@ -88,6 +89,11 @@ button {
     border-width: 1px 1px 3px;
     box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
     margin-bottom: 10px;
+  }
+
+  button:active {
+    background-color: darkgreen;
+    border: darkgreen;
   }
 
 /* Media Query --------------*/
